# kleister-nda-preparation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: label-transformer.ipynb
src/nda/: __init__.py  main.py  schema.py
src/nda/notebooks/: eda.ipynb  label-transformer.ipynb
tests/: test_data_loader.py  test_label_transformer.py  test_schema.py
