[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "nda"
description = "Processing and formatting data from the Kleister NDA dataset for KIE tasks with LLMs."
readme = "README.md"
authors = [ { name = "Gabriel Fuentes", email = "gafnts@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pandas>=3.0.1",
  "pyarrow>=23.0.1",
  "pydantic>=2.12.5",
]
scripts.nda = "nda.main:main"

[dependency-groups]
dev = [
  "ipykernel>=7.2",
  "mypy>=1.19.1",
  "pandas-stubs>=3.0.0.260204",
  "pre-commit>=4.5.1",
  "pyproject-fmt>=2.21",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.15.4",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/nda" ]
version.source = "vcs"

[tool.uv]
link-mode = "copy"

[tool.ruff]
target-version = "py313"
src = [ "src" ]
lint.select = [ "B", "E4", "E7", "E9", "F", "G", "I", "N", "SIM", "UP" ]

[tool.mypy]
mypy_path = "src"
files = [ "src", "tests" ]
plugins = [ "pydantic.mypy" ]
strict = true
overrides = [ { module = "tests.*", disallow_untyped_defs = false, disallow_any_expr = false } ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
run.omit = [ "src/nda/main.py" ]
run.source = [ "src" ]
report.fail_under = 95
report.show_missing = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
